# gromos-rs

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRATES_EVALUATION.md  Cargo.toml  FUTURE.md  Justfile  LICENSE  Makefile  PLAN.md  PROGRESS.md  README.md  clippy.toml  rustfmt.toml
crates/gromos/: Cargo.toml
crates/gromos-analysis/: Cargo.toml
crates/gromos-analysis/.claude/: CONTEXT.md
crates/gromos-analysis/src/: diffusion.rs  fit.rs  gyration.rs  hbond.rs  lib.rs  rdf.rs  rmsd.rs
crates/gromos-analysis/tests/: test_frameout.rs
crates/gromos-cli/: Cargo.toml
crates/gromos-cli/src/: main.rs
crates/gromos-cli/src/commands/: analysis.rs  mod.rs  simulation.rs
crates/gromos-cli/tests/: gromosxx_references.rs  run_references.py  test_gromosXX_references.rs
crates/gromos-cli/tests/gromosXX_references/: run_references.py
crates/gromos-cli/tests/gromosXX_references/aladip_solvated/: input.toml
crates/gromos-cli/tests/gromosXX_references/benzene_vacuum/: benzene_vacuum.conf  benzene_vacuum.in
crates/gromos-cli/tests/gromosXX_references/butane_vacuum/: butane_vacuum.conf  butane_vacuum.topo  input.toml
crates/gromos-cli/tests/gromosXX_references/nacl_3water_cutoff/: nacl_3water_cutoff.conf  nacl_3water_cutoff.in
crates/gromos-cli/tests/gromosXX_references/nacl_pair/: nacl_pair.in
crates/gromos-cli/tests/gromosXX_references/nacl_pair_box/: nacl_pair_box.conf  nacl_pair_box.in  nacl_pair_box.topo
crates/gromos-cli/tests/gromosXX_references/nacl_water_box/: input.toml
crates/gromos-cli/tests/gromosXX_references/nacl_water_box_shifted/: input.toml
crates/gromos-cli/tests/gromosXX_references/pair_lj/: pair_lj.in
crates/gromos-cli/tests/gromosXX_references/pair_lj_mixed/: pair_lj_mixed.topo
crates/gromos-cli/tests/gromosXX_references/water_10_box/: water_10_box.conf
crates/gromos-cli/tests/gromosXX_references/water_216_box/: input.toml  water_216_box.conf  water_216_box.in
crates/gromos-core/: Cargo.toml
crates/gromos-core/.claude/: CONTEXT.md
crates/gromos-core/benches/: math_bench.rs
crates/gromos-core/src/: algorithm.rs  configuration.rs  ffi.rs  float.rs  gather.rs  lib.rs  math.rs  matrix.rs  pairlist.rs  random.rs  selection.rs  stat.rs  topology.rs  units.rs  validation.rs  vector.rs
crates/gromos-forces/: Cargo.toml
crates/gromos-forces/.claude/: CONTEXT.md
crates/gromos-forces/benches/: nonbonded_bench.rs
crates/gromos-forces/src/: bonded.rs  electrostatics.rs  energy.rs  lib.rs  local_elevation.rs  nonbonded.rs  pme.rs  pme_mpi.rs  polarization.rs  qmmm.rs  restraints.rs
crates/gromos-forces/src/bonded/: angles.rs  bonds.rs  dihedrals.rs  improper.rs  mod.rs  perturbed.rs
crates/gromos-forces/src/gpu/: mod.rs
crates/gromos-forces/src/nonbonded/: excluded.rs  innerloops.rs  mod.rs  params.rs  perturbed.rs
crates/gromos-integrators/: Cargo.toml
crates/gromos-integrators/.claude/: CONTEXT.md
crates/gromos-integrators/benches/: thermostat_bench.rs
crates/gromos-integrators/src/: barostats.rs  constraints.rs  eds.rs  fep.rs  gamd.rs  integrator.rs  lib.rs  mod.rs  mpi.rs  remd.rs  remd_mpi.rs  replica.rs  thermostats.rs  virtual_atoms.rs
crates/gromos-integrators/src/algorithms/: berendsen_barostat.rs  berendsen_thermostat.rs  energy.rs  forcefield.rs  leap_frog.rs  lincs_algorithm.rs  mod.rs  nosehoover_thermostat.rs  pressure_calculation.rs  remove_com_motion.rs  settle_algorithm.rs  shake_algorithm.rs  steepest_descent.rs  temperature.rs
crates/gromos-io/: Cargo.toml
crates/gromos-io/.claude/: CONTEXT.md
crates/gromos-io/benches/: io_bench.rs
crates/gromos-io/src/: coordinate.rs  distanceres.rs  dlg.rs  energy.rs  energy_binary.rs  force.rs  free_energy.rs  g96.rs  ifp.rs  imd.rs  jobs.rs  lib.rs  mk_script.rs  mtb.rs  pdb.rs  posres.rs  ptp.rs  script_template.rs  topology.rs  trajectory.rs  trajectory_binary.rs
crates/gromos-io/src/input/: eds_block.rs  eds_types.rs  gamd_block.rs  gamd_types.rs  replica_block.rs  replica_types.rs
crates/gromos-io/src/output/: eds_stats.rs  gamd_stats.rs
crates/gromos-md/: Cargo.toml  md.tre  md.trg
crates/gromos-md/.claude/: CONTEXT.md
crates/gromos-md/benches/: md_bench.rs
crates/gromos-md/src/: lib.rs
crates/gromos-md/tests/: run_references.py  test_gromosXX_references.rs  test_pairlist_margin.rs
crates/gromos-md/tests/gromosXX_references/: run_references.py
crates/gromos-tools/: Cargo.toml
crates/gromos-tools/.claude/: CONTEXT.md
crates/gromos-tools/src/: lib.rs
crates/gromos/src/: lib.rs
crates/gromos/tests/: io_integration_tests.rs  reference_tests.rs
crates/pyo3-gromos/: Cargo.toml
crates/pyo3-gromos/.claude/: CONTEXT.md
crates/pyo3-gromos/src/: algorithm_sequence.rs  lib.rs  parameters.rs  py_conf.rs  simulation.rs  system.rs  topology.rs
py-gromos/: .gitignore  Cargo.toml  Makefile  README.md  mkdocs.yml  pyproject.toml
py-gromos/.claude/: CONTEXT.md
py-gromos/docs/: index.md
py-gromos/docs/api/: reference.md
py-gromos/docs/development/: building.md  contributing.md  python-bindings-tutorial.md
py-gromos/docs/stylesheets/: extra.css
py-gromos/docs/user-guide/: installation.md  learning-guide.md  quick-start.md
py-gromos/examples/: 02_system_setup.py  03_integrators.py  04_advanced_sampling.py  05_complete_workflow.py  06_run_standard_md.py  07_run_gamd.py  08_run_eds.py  09_run_remd.py  10_run_ti.py  11_trajectory_analysis.py  12_nmr_restraints.py  13_binary_trajectory_formats.py  13_virtual_atoms.py  14_local_elevation_metadynamics.py  15_polarization_qmmm.py  16_free_energy_perturbation.py  17_analysis_programs.py
py-gromos/notebooks/: 00_api_design_mockup.ipynb  01_understanding_pyo3_bindings.ipynb  02_molecular_systems_and_energy.ipynb  03_performance_deep_dive.ipynb  04_advanced_features_complete.ipynb
py-gromos/python/gromos/: __init__.py  analysis.py  gromos.pyi  md_runners.py  system_builder.py
py-gromos/src/: lib.rs
py-gromos/tests/: test_advanced_features.py  test_basic.py  test_gromosXX_references.py
(+404 files in other folders)
