[package]
name = "py-gromos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for GROMOS-RS molecular dynamics engine"

[lib]
name = "gromos"
crate-type = ["cdylib"]

[dependencies]
# PyO3 bindings crate
pyo3-gromos = { workspace = true }

# Core Rust library (facade crate)
gromos = { workspace = true }

# Python bindings
pyo3 = { workspace = true, features = ["extension-module", "abi3-py312"] }
numpy = { workspace = true }

# SIMD and math
glam = { workspace = true }

# Parallelism
rayon = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.21"
