[package]
name = "gromos-analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Analysis tools for GROMOS-RS molecular dynamics"
autobins = false

[dependencies]
gromos-core = { workspace = true }
gromos-io = { workspace = true }

# SIMD and math
glam = { workspace = true }

# Parallelism
rayon = { workspace = true }

# Progress bars (used by analysis bins)
indicatif = { workspace = true }

# Logging (used by analysis bins)
log = { workspace = true }
env_logger = { workspace = true }

# Serialization
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "gromos-core/serde"]

# ── Structural ─────────────────────────────────────────────────────

[[bin]]
name = "rmsd"
path = "src/bin/structural/rmsd.rs"

[[bin]]
name = "rmsf"
path = "src/bin/structural/rmsf.rs"

[[bin]]
name = "rmsdmat"
path = "src/bin/structural/rmsdmat.rs"

[[bin]]
name = "rmsdhel"
path = "src/bin/structural/rmsdhel.rs"

[[bin]]
name = "rgyr"
path = "src/bin/structural/rgyr.rs"

[[bin]]
name = "dssp"
path = "src/bin/structural/dssp.rs"

[[bin]]
name = "fitmol"
path = "src/bin/structural/fitmol.rs"

[[bin]]
name = "cog"
path = "src/bin/structural/cog.rs"

[[bin]]
name = "distmat"
path = "src/bin/structural/distmat.rs"

# ── Energy ─────────────────────────────────────────────────────────

[[bin]]
name = "ene_ana"
path = "src/bin/energy/ene_ana.rs"

[[bin]]
name = "ener"
path = "src/bin/energy/ener.rs"

[[bin]]
name = "ener_box"
path = "src/bin/energy/ener_box.rs"

[[bin]]
name = "int_ener"
path = "src/bin/energy/int_ener.rs"

[[bin]]
name = "temperature"
path = "src/bin/energy/temperature.rs"

[[bin]]
name = "pot_aver"
path = "src/bin/energy/pot_aver.rs"

[[bin]]
name = "propertyaver"
path = "src/bin/energy/propertyaver.rs"

# ── Distribution ───────────────────────────────────────────────────

[[bin]]
name = "rdf"
path = "src/bin/distribution/rdf.rs"

[[bin]]
name = "rdf_matrix"
path = "src/bin/distribution/rdf_matrix.rs"

[[bin]]
name = "hbond"
path = "src/bin/distribution/hbond.rs"

[[bin]]
name = "contactnum"
path = "src/bin/distribution/contactnum.rs"

[[bin]]
name = "close_pair"
path = "src/bin/distribution/close_pair.rs"

[[bin]]
name = "iondens"
path = "src/bin/distribution/iondens.rs"

[[bin]]
name = "sasa"
path = "src/bin/distribution/sasa.rs"

[[bin]]
name = "sasa_hasel"
path = "src/bin/distribution/sasa_hasel.rs"

# ── Dynamics / transport ───────────────────────────────────────────

[[bin]]
name = "diffus"
path = "src/bin/dynamics/diffus.rs"

[[bin]]
name = "visco"
path = "src/bin/dynamics/visco.rs"

[[bin]]
name = "tcf"
path = "src/bin/dynamics/tcf.rs"

[[bin]]
name = "angaver"
path = "src/bin/dynamics/angaver.rs"

[[bin]]
name = "rot_rel"
path = "src/bin/dynamics/rot_rel.rs"

[[bin]]
name = "dipole"
path = "src/bin/dynamics/dipole.rs"

[[bin]]
name = "epsilon"
path = "src/bin/dynamics/epsilon.rs"

[[bin]]
name = "eps_field"
path = "src/bin/dynamics/eps_field.rs"

# ── Free energy ────────────────────────────────────────────────────

[[bin]]
name = "bar"
path = "src/bin/free_energy/bar.rs"

[[bin]]
name = "ext_ti_ana"
path = "src/bin/free_energy/ext_ti_ana.rs"

[[bin]]
name = "trs_ana"
path = "src/bin/free_energy/trs_ana.rs"

[[bin]]
name = "reweight"
path = "src/bin/free_energy/reweight.rs"

[[bin]]
name = "rep_ana"
path = "src/bin/free_energy/rep_ana.rs"

[[bin]]
name = "eds_ana"
path = "src/bin/free_energy/eds_ana.rs"

[[bin]]
name = "gamd_ana"
path = "src/bin/free_energy/gamd_ana.rs"

# ── Trajectory manipulation ────────────────────────────────────────

[[bin]]
name = "frameout"
path = "src/bin/trajectory/frameout.rs"

[[bin]]
name = "filter"
path = "src/bin/trajectory/filter.rs"

[[bin]]
name = "tstrip"
path = "src/bin/trajectory/tstrip.rs"

[[bin]]
name = "gathtraj"
path = "src/bin/trajectory/gathtraj.rs"

[[bin]]
name = "follow"
path = "src/bin/trajectory/follow.rs"

[[bin]]
name = "tser"
path = "src/bin/trajectory/tser.rs"

# ── NOE / NMR ──────────────────────────────────────────────────────

[[bin]]
name = "noe"
path = "src/bin/noe/noe.rs"

[[bin]]
name = "post_noe"
path = "src/bin/noe/post_noe.rs"

[[bin]]
name = "predict_noe"
path = "src/bin/noe/predict_noe.rs"

[[bin]]
name = "nhoparam"
path = "src/bin/noe/nhoparam.rs"

# ── Clustering ─────────────────────────────────────────────────────

[[bin]]
name = "cluster"
path = "src/bin/clustering/cluster.rs"

[[bin]]
name = "postcluster"
path = "src/bin/clustering/postcluster.rs"

# ── X-ray / crystallography ───────────────────────────────────────

[[bin]]
name = "r_factor"
path = "src/bin/xray/r_factor.rs"

[[bin]]
name = "r_real_factor"
path = "src/bin/xray/r_real_factor.rs"

[[bin]]
name = "structure_factor"
path = "src/bin/xray/structure_factor.rs"

[[bin]]
name = "xray_map"
path = "src/bin/xray/xray_map.rs"

[[bin]]
name = "xrayts"
path = "src/bin/xray/xrayts.rs"

[[bin]]
name = "cry"
path = "src/bin/xray/cry.rs"

[[bin]]
name = "cry_rms"
path = "src/bin/xray/cry_rms.rs"

# ── Special ────────────────────────────────────────────────────────

[[bin]]
name = "disicl"
path = "src/bin/special/disicl.rs"

[[bin]]
name = "ditrans"
path = "src/bin/special/ditrans.rs"

[[bin]]
name = "solute_entropy"
path = "src/bin/special/solute_entropy.rs"

[[bin]]
name = "m_widom"
path = "src/bin/special/m_widom.rs"

[[bin]]
name = "shake_analysis"
path = "src/bin/special/shake_analysis.rs"

[[bin]]
name = "swd"
path = "src/bin/special/swd.rs"

[[bin]]
name = "epath"
path = "src/bin/special/epath.rs"

[[bin]]
name = "pairlist"
path = "src/bin/special/pairlist.rs"
