[package]
name = "gromos-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified CLI entry point for GROMOS-RS molecular dynamics tools"

[[bin]]
name = "gromos"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }
