[package]
name = "gromos-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and math primitives for GROMOS-RS molecular dynamics"

[dependencies]
# SIMD and math
glam = { workspace = true }
wide = { workspace = true }

# Parallelism
rayon = { workspace = true }

# Serialization
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
ffi = []

[dev-dependencies]
approx = "0.5"
