[package]
name = "gromos-integrators"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Time integration algorithms for GROMOS-RS molecular dynamics"

[dependencies]
gromos-core = { workspace = true }
gromos-forces = { workspace = true }

# SIMD and math
glam = { workspace = true }

# Parallelism
rayon = { workspace = true }

# Random number generation for stochastic dynamics
rand = { workspace = true }
rand_distr = { workspace = true }

# Serialization
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "gromos-core/serde"]
mpi = []
