[package]
name = "gromos-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "File I/O for GROMOS-RS molecular dynamics"

[dependencies]
gromos-core = { workspace = true }
gromos-integrators = { workspace = true }

# Binary I/O
byteorder = { workspace = true }
chrono = { workspace = true }

# Serialization
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Networking for IMD
thiserror = "1.0"

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "gromos-core/serde"]
